--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@deck.gl/core": "^9.0.29",
+    "@deck.gl/layers": "^9.0.29",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
